Fix test flakiness for GetVDAErrorCounterForRunningOutOfPendingBuffers

This CL adresses the flakiness in the test due to assumption about task
scheduling. It drains all tasks after each Decode() call. With this change, it
is now required to fill all kNumSharedMemorySegments before starting to fill
kMaxNumOfPendingBuffers.

Bug: 795387
Change-Id: Ib297676316cd7f9cef529f27935ae5e1724f61eb
Reviewed-on: https://chromium-review.googlesource.com/861053
Commit-Queue: Emircan Uysaler <emircan@chromium.org>
Reviewed-by: Sergey Ulanov <sergeyu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529610}
Former-commit-id: f5516e6184566b7594b97cbb0e53b4b45e7af337